# osl

./: .hlint.yaml  NOTICE  README.md  flake.nix  hlint.yaml  osl.cabal  stack.yaml
app/: Main.hs
examples/: bug2.osl  casper.osl  constants.osl  false.osl  field.osl  fri.osl  inverse.osl  max.osl  orbis.osl  positive.osl  sudoku.osl  sudoku.s11  tinyram.osl  top-and-bottom.osl
examples/regressions/: apply-to-coproduct.osl  name-clash-bug-1.osl  name-clash-bug-2.osl
src/: Cast.hs  Die.hs
src/Actus/: Core.hs  Domain.hs  Model.hs  Utility.hs
src/Actus/Domain/: Basic.hs  BusinessEvents.hs  ContractState.hs  ContractTerms.hs  Schedule.hs
src/Actus/Model/: Applicability.hs  ContractSchedule.hs  Payoff.hs
src/Actus/Utility/: DateShift.hs  ScheduleGenerator.hs  YearFraction.hs
src/Actus/Utility/ANN/: Annuity.hs
src/Halo2/: AIR.hs  ArithmetizationConfig.hs  BoundLogicConstraintComplexity.hs  ByteDecomposition.hs  Circuit.hs  CircuitMetrics.hs  Coefficient.hs  FiniteField.hs  LogicConstraint.hs  LogicToArithmetic.hs  Polynomial.hs  PowerProduct.hs  Prelude.hs  TruthTable.hs  Types.hs
src/Halo2/Types/: AIR.hs  Argument.hs  ArithmetizationConfig.hs  BitsPerByte.hs  Byte.hs  ByteDecomposition.hs  ByteDecompositionSize.hs  BytesPerWord.hs  CellReference.hs  Circuit.hs  CircuitConfig.hs  CircuitMetrics.hs  CircuitWithWitnesses.hs  Coefficient.hs  ColumnIndex.hs  ColumnType.hs  ColumnTypes.hs  EqualityConstrainableColumns.hs  EqualityConstraint.hs  EqualityConstraints.hs  Exponent.hs  FieldElement.hs  FiniteField.hs  FixedBound.hs  FixedColumn.hs  FixedValues.hs  FixedVariableValues.hs  InputExpression.hs  Label.hs  LogicConstraint.hs  LogicConstraints.hs  LogicToArithmeticColumnLayout.hs  LookupArgument.hs  LookupArguments.hs  LookupTableColumn.hs  Monomial.hs  Polynomial.hs  PolynomialConstraints.hs  PolynomialDegreeBound.hs  PolynomialVariable.hs  (+8 more)
src/OSL/: ActusDictionary.hs  Argument.hs  ArgumentForm.hs  Bound.hs  BuildTranslationContext.hs  Debug.hs  Die.hs  EntryPoint.hs  Evaluation.hs  Format.hs  FromHaskell.hs  LoadContext.hs  Map.hs  Parse.hs  Satisfaction.hs  Sigma11.hs  SimplifyType.hs  Term.hs  Tokenize.hs  Translate.hs  TranslatedEvaluation.hs  TranslationContext.hs  Type.hs  ValidContext.hs  ValidateContext.hs  Value.hs  Witness.hs
src/OSL/Types/: Argument.hs  ArgumentForm.hs  Arity.hs  Cardinality.hs  DeBruijnIndex.hs  ErrorMessage.hs  EvaluationContext.hs  FileName.hs  Keyword.hs  OSL.hs  PreValue.hs  PreprocessedWitness.hs  Sigma11.hs  Token.hs  Translation.hs  TranslationContext.hs  Value.hs
src/OSL/Types/Sigma11/: Argument.hs  EvaluationContext.hs  StaticEvaluationContext.hs  Value.hs  ValueTree.hs
src/Semicircuit/: Argument.hs  DNFFormula.hs  Gensyms.hs  LiftSecondOrderQuantifiers.hs  PNFFormula.hs  PrenexNormalForm.hs  Sigma11.hs  ToLogicCircuit.hs  Translation.hs
src/Semicircuit/Types/: DNFFormula.hs  NameMapping.hs  PNFFormula.hs  QFFormula.hs  Semicircuit.hs  SemicircuitToLogicCircuitColumnLayout.hs  Sigma11.hs
src/Stark/Types/: Scalar.hs
src/Trace/: FromLogicAIR.hs  FromLogicCircuit.hs  FromLogicConstraints.hs  LogicToArithmetic.hs  Metrics.hs  Semantics.hs  ToArithmeticAIR.hs  ToArithmeticCircuit.hs  Types.hs
src/Trace/Types/: EvaluationContext.hs  Metrics.hs
test/OSL/: Spec.hs
test/OSL/Spec/: FromHaskellSpec.hs  Gen.hs  OSLSpec.hs  SimplifyTypeSpec.hs  SudokuSpec.hs
test/OSL/Spec/Sudoku/: Types.hs
test/Stark/Spec/: ScalarSpec.hs
