cabal-version:      2.4
name:               osl
version:            0.1.0.0
license: NONE
license-files: LICENSE
author:        Orbis Labs
maintainer:    morgan.thomas@platonic.systems

data-files:
  examples/*.osl
  examples/regressions/*.osl

library
  exposed-modules:
    Halo2.Prelude
    Halo2.Types
    Halo2.Types.Circuit
    Halo2.Types.Coefficient
    Halo2.Types.ColumnType
    Halo2.Types.ColumnIndex
    Halo2.Types.ColumnTypes
    Halo2.Types.EqualityConstrainableColumns
    Halo2.Types.EqualityConstraint
    Halo2.Types.EqualityConstraints
    Halo2.Types.Exponent
    Halo2.Types.FieldElement
    Halo2.Types.FiniteField
    Halo2.Types.FixedVariableValues
    Halo2.Types.InputExpression
    Halo2.Types.LogicConstraint
    Halo2.Types.LogicConstraints
    Halo2.Types.LookupArgument
    Halo2.Types.LookupArguments
    Halo2.Types.Monomial
    Halo2.Types.Polynomial
    Halo2.Types.PolynomialConstraints
    Halo2.Types.PolynomialDegreeBound
    Halo2.Types.PolynomialVariable
    Halo2.Types.PowerProduct
    Halo2.Types.RowIndex
    Halo2.Types.RowCount
    Halo2.Types.TableColumn
    Halo2.Types.Witness
    Halo2.Types.WitnessColumns
    Halo2.Types.WitnessGenerationContext
    OSL.Bound
    OSL.BuildTranslationContext
    OSL.Die
    OSL.EntryPoint
    OSL.Parse
    OSL.Sigma11
    OSL.Term
    OSL.Tokenize
    OSL.Translate
    OSL.TranslationContext
    OSL.Type
    OSL.Types.Arity
    OSL.Types.Cardinality
    OSL.Types.DeBruijnIndex
    OSL.Types.ErrorMessage
    OSL.Types.Keyword
    OSL.Types.OSL
    OSL.Types.Sigma11
    OSL.Types.Token
    OSL.Types.Translation
    OSL.Types.TranslationContext
    OSL.ValidContext
    OSL.ValidateContext

  build-depends:
    base >= 4.9 && < 5,
    aeson,
    bytestring,
    compactable,
    containers,
    either,
    extra,
    generic-lens,
    genvalidity,
    genvalidity-bytestring,
    genvalidity-sydtest,
    genvalidity-sydtest-aeson,
    ghc-prim,
    hedgehog -any,
    lens,
    text,
    mtl,
    optparse-applicative,
    parsec,
    process,
    QuickCheck,
    random,
    sydtest,
    sydtest-discover,
    text -any,
    transformers,
    validity

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
          -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
          -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists
          -threaded -rtsopts -with-rtsopts=-N


test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs

  other-modules:
    OSL.Spec.OSLSpec

  build-tools:
    sydtest-discover

  build-depends:
    base >= 4.9 && < 5,
    aeson,
    bytestring,
    containers,
    either,
    extra,
    generic-lens,
    genvalidity,
    genvalidity-bytestring,
    genvalidity-sydtest,
    genvalidity-sydtest-aeson,
    ghc-prim,
    hedgehog -any,
    lens,
    mtl,
    optparse-applicative,
    process,
    QuickCheck,
    random,
    raw-strings-qq,
    sydtest,
    text -any,
    transformers,
    validity,

    osl

  hs-source-dirs: test

  default-language: Haskell2010
  ghc-options:
          -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
          -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists
          -threaded -rtsopts -with-rtsopts=-N


executable osl
  main-is:
    Main.hs

  build-depends:
    osl

  hs-source-dirs: app
  default-language: Haskell2010
  ghc-options:
          -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
          -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists

