cabal-version:      2.4
name:               osl
version:            0.1.0.0
license: NONE
license-files: LICENSE
author:        Orbis Labs, Casper Association
maintainer:    morgan.a.s.thomas@gmail.com

data-files:
  examples/*.osl
  examples/regressions/*.osl

library
  exposed-modules:
    Cast
    Die
    Halo2.AIR
    Halo2.Prelude
    Halo2.ArithmetizationConfig
    Halo2.ByteDecomposition
    Halo2.Circuit
    Halo2.CircuitMetrics
    Halo2.LogicConstraint
    Halo2.Polynomial
    Halo2.PowerProduct
    Halo2.TruthTable
    Halo2.Types.AIR
    Halo2.Types.ArithmetizationConfig
    Halo2.Types.Byte
    Halo2.Types.ByteDecompositionSize
    Halo2.Types.ByteDecomposition
    Halo2.Types.BitsPerByte
    Halo2.Types.BytesPerWord
    Halo2.Types.CellReference
    Halo2.Types.Circuit
    Halo2.Types.CircuitMetrics
    Halo2.Types.CircuitWithWitnesses
    Halo2.Types.Coefficient
    Halo2.Types.ColumnType
    Halo2.Types.ColumnIndex
    Halo2.Types.ColumnTypes
    Halo2.Types.EqualityConstrainableColumns
    Halo2.Types.EqualityConstraint
    Halo2.Types.EqualityConstraints
    Halo2.Types.Exponent
    Halo2.Types.FixedBound
    Halo2.Types.FixedColumn
    Halo2.Types.FixedValues
    Halo2.Types.InputExpression
    Halo2.Types.LogicConstraint
    Halo2.Types.LogicConstraints
    Halo2.Types.LogicToArithmeticColumnLayout
    Halo2.Types.LookupArgument
    Halo2.Types.LookupArguments
    Halo2.Types.LookupTableColumn
    Halo2.Types.Polynomial
    Halo2.Types.PolynomialConstraints
    Halo2.Types.PolynomialDegreeBound
    Halo2.Types.PolynomialVariable
    Halo2.Types.PowerProduct
    Halo2.Types.RowIndex
    Halo2.Types.RowCount
    Halo2.Types.Witness
    Halo2.Types.WitnessColumns
    Halo2.Types.WitnessGenerationContext
    OSL.ArgumentForm
    OSL.Bound
    OSL.BuildTranslationContext
    OSL.EntryPoint
    OSL.Evaluation
    OSL.Parse
    OSL.Satisfaction
    OSL.Sigma11
    OSL.SimplifyType
    OSL.Term
    OSL.Tokenize
    OSL.Translate
    OSL.TranslationContext
    OSL.Type
    OSL.Types.ArgumentForm
    OSL.Types.Argument
    OSL.Types.Arity
    OSL.Types.Cardinality
    OSL.Types.DeBruijnIndex
    OSL.Types.ErrorMessage
    OSL.Types.EvaluationContext
    OSL.Types.Keyword
    OSL.Types.OSL
    OSL.Types.PreprocessedWitness
    OSL.Types.Sigma11
    OSL.Types.Token
    OSL.Types.Translation
    OSL.Types.TranslationContext
    OSL.Types.Value
    OSL.ValidContext
    OSL.ValidateContext
    OSL.Witness
    Semicircuit.DNFFormula
    Semicircuit.Gensyms
    Semicircuit.PrenexNormalForm
    Semicircuit.PNFFormula
    Semicircuit.Sigma11
    Semicircuit.ToLogicCircuit
    Semicircuit.Types.DNFFormula
    Semicircuit.Types.NameMapping
    Semicircuit.Types.PNFFormula
    Semicircuit.Types.QFFormula
    Semicircuit.Types.Semicircuit
    Semicircuit.Types.SemicircuitToLogicCircuitColumnLayout
    Semicircuit.Types.Sigma11
    Stark.Types.Scalar
    Trace.FromLogicCircuit
    Trace.LogicToArithmetic
    Trace.Metrics
    Trace.ToArithmeticAIR
    Trace.ToArithmeticCircuit
    Trace.Types
    Trace.Types.Metrics

  build-depends:
    base >= 4.9 && < 5,
    aeson,
    basement,
    bytestring,
    containers,
    cryptonite,
    either,
    extra,
    generic-lens,
    genvalidity,
    genvalidity-bytestring,
    genvalidity-sydtest,
    genvalidity-sydtest-aeson,
    ghc-prim,
    hedgehog -any,
    lens,
    text,
    mtl,
    numeric-prelude,
    optparse-applicative,
    parsec,
    process,
    QuickCheck,
    random,
    safe,
    sydtest,
    sydtest-discover,
    text -any,
    transformers,
    validity

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
          -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
          -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists
          -threaded -rtsopts -with-rtsopts=-N


test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs

  other-modules:
    OSL.Spec.OSLSpec
    OSL.Spec.SimplifyTypeSpec
    OSL.Spec.SudokuSpec

  build-tools:
    sydtest-discover

  build-depends:
    base >= 4.9 && < 5,
    aeson,
    bytestring,
    containers,
    either,
    extra,
    generic-lens,
    genvalidity,
    genvalidity-bytestring,
    genvalidity-sydtest,
    genvalidity-sydtest-aeson,
    ghc-prim,
    hedgehog -any,
    lens,
    mtl,
    optparse-applicative,
    parsec,
    process,
    QuickCheck,
    random,
    raw-strings-qq,
    sydtest,
    text -any,
    transformers,
    validity,

    osl

  hs-source-dirs: test

  default-language: Haskell2010
  ghc-options:
          -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
          -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists
          -threaded -rtsopts -with-rtsopts=-N


executable osl
  main-is:
    Main.hs

  build-depends:
    osl

  hs-source-dirs: app
  default-language: Haskell2010
  ghc-options:
          -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
          -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists

